; ModuleID = '/home/carl/AnghaBench/git/extr_fast-import.c_parse_alias.c'
source_filename = "/home/carl/AnghaBench/git/extr_fast-import.c_parse_alias.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.object_entry = type { i32 }
%struct.branch = type { i32 }

@next_mark = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Expected 'mark' command, got %s\00", align 1
@command_buf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"to \00", align 1
@.str.2 = private unnamed_addr constant [30 x i8] c"Expected 'to' command, got %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @parse_alias to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parse_alias() #0 {
  %1 = alloca %struct.object_entry*, align 8
  %2 = alloca %struct.branch, align 4
  %3 = call i32 (...) @skip_optional_lf()
  %4 = call i32 (...) @read_next_command()
  %5 = call i32 (...) @parse_mark()
  %6 = load i32, i32* @next_mark, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %0
  %9 = call i32 @_(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @command_buf, i32 0, i32 0), align 4
  %11 = call i32 @die(i32 %9, i32 %10)
  br label %12

12:                                               ; preds = %8, %0
  %13 = call i32 @memset(%struct.branch* %2, i32 0, i32 4)
  %14 = call i32 @parse_objectish_with_prefix(%struct.branch* %2, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %20, label %16

16:                                               ; preds = %12
  %17 = call i32 @_(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0))
  %18 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @command_buf, i32 0, i32 0), align 4
  %19 = call i32 @die(i32 %17, i32 %18)
  br label %20

20:                                               ; preds = %16, %12
  %21 = getelementptr inbounds %struct.branch, %struct.branch* %2, i32 0, i32 0
  %22 = call %struct.object_entry* @find_object(i32* %21)
  store %struct.object_entry* %22, %struct.object_entry** %1, align 8
  %23 = load %struct.object_entry*, %struct.object_entry** %1, align 8
  %24 = call i32 @assert(%struct.object_entry* %23)
  %25 = load i32, i32* @next_mark, align 4
  %26 = load %struct.object_entry*, %struct.object_entry** %1, align 8
  %27 = call i32 @insert_mark(i32 %25, %struct.object_entry* %26)
  ret void
}

declare dso_local i32 @skip_optional_lf(...) #1

declare dso_local i32 @read_next_command(...) #1

declare dso_local i32 @parse_mark(...) #1

declare dso_local i32 @die(i32, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @memset(%struct.branch*, i32, i32) #1

declare dso_local i32 @parse_objectish_with_prefix(%struct.branch*, i8*) #1

declare dso_local %struct.object_entry* @find_object(i32*) #1

declare dso_local i32 @assert(%struct.object_entry*) #1

declare dso_local i32 @insert_mark(i32, %struct.object_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
